objects/Location.object
<CustomObject>
    <fields>
        <fullName>Location_Is_Mine__c</fullName>
        <description>Used for reporting and list views so users can see their trunk stock.</description>
        <formula>IF(
RIGHT(external_id__c,4) = RIGHT($User.sap_no__c,4),
True,
False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Is Mine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sap_company_code__c</fullName>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Code</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Locations</fullName>
        <filterScope>Everything</filterScope>
        <label>All Locations</label>
    </listViews>
    <listViews>
        <fullName>My_Locations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Locations</label>
    </listViews>
    <listViews>
        <fullName>My_Trunk_Stock</fullName>
        <columns>Name</columns>
        <columns>LocationType</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location_Is_Mine__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LocationType</field>
            <operation>equals</operation>
            <value>Van</value>
        </filters>
        <label>My Trunk Stock</label>
        <sharedTo>
            <role>BINC_Sales</role>
            <roleAndSubordinates>AVP_Central</roleAndSubordinates>
            <roleAndSubordinates>AVP_East</roleAndSubordinates>
            <roleAndSubordinates>AVP_West</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>